# planner-app

./: README.md  main.py  pyproject.toml
planner/: ai_scheduler.py  app.py  cli.py  config.py  models.py  storage.py
planner/modals/: confirm.py  help_modal.py  input_modal.py  meeting_editor.py  paper_editor.py  schedule_modal.py  task_editor.py
planner/screens/: calendar.py  dashboard.py  meetings.py  planning.py  project_detail.py  projects.py  setup.py
