[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-planner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "anthropic>=0.25",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
planner = "planner.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["planner*"]
